--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,4 @@
-Package rinfinispanapi
+Package Groovy4R
 =========================
-Version: 0.85 [2015-01-16]
+Version: 0.85 [2015-08-01]
 o  Initial release
