Updated news-related text.

--- a/NEWS
+++ b/NEWS
@@ -1,7 +1,7 @@
 Package rGroovy
 =========================
 Version: 0.85 [2015-08-01]
-o  Initial release
-Version: 1.0 [2015-10-27]
-o  Package renamed to rGroovy
-o  Groovy has been updated to 2.4.5 (invoke dynamic)
+o  Initial development release.
+Version: 1.0 [2015-10-30]
+o  Package renamed to rGroovy.
+o  Package released on CRAN.
